--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^9.8.8",
     "parcel-bundler": "^1.12.5",
     "parcel-plugin-static-files-copy": "^2.6.0",
+    "postcss": "^8.4.12",
     "sass": "^1.49.9"
   },
-  "staticFilse":{
-    "staticPath":"static"
-  }
+  "staticFilse": {
+    "staticPath": "static"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
